--- a/src/App.module.css
+++ b/src/App.module.css
@@ -44,6 +44,10 @@
   margin: 5px 0;
 }
 
+.task_isDone {
+  color: grey;
+}
+
 .filter {
   text-align: center;
   margin: 5px auto;
@@ -52,6 +56,7 @@
 .filter button {
   width: 93px;
 }
+
 
 
 
